// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.integration.k8s.testing;

import "google/api/resource.proto";

option java_package = "org.measurement.integration.k8s.testing";
option java_multiple_files = true;
option java_outer_classname = "CorrectnessTestConfigProto";

message EdpaCorrectnessTestConfig {
  // gRPC target of Kingdom public API server.
  string kingdom_public_api_target = 1;

  // Expected hostname (DNS-ID) in the Kingdom public API server's TLS
  // certificate.
  //
  // If not specified, standard TLS DNS-ID derivation will be used.
  string kingdom_public_api_cert_host = 2;

  // MeasurementConsumer resource name.
  string measurement_consumer = 3 [(google.api.resource_reference).type =
                                       "halo.wfanet.org/MeasurementConsumer"];

  // Authentication key for the CMMS public API.
  string api_authentication_key = 4;

  // JWT used to authenticate requests to the RequisitionFetcher Cloud Function.
  string auth_id_token = 5;

  // Full HTTP endpoint URL of the RequisitionFetcher Cloud Function.
  string requisition_fetcher_endpoint = 6;

  // Storage bucket.
  string storage_bucket = 7;
}
